# ipprefixtrie

./: .gitignore  .readthedocs.yaml  LICENSE  MAINTAINERS  README.rst  pyproject.toml  setup.py
docs/: Makefile  api.rst  conf.py  contact.rst  contrib.rst  index.rst  install.rst  whatisit.rst
ipprefixtrie/: __init__.py  exceptions.py  ipprefixtrie.py  metadata.py
tests/: test_ipprefixtrie.py
