[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ipprefixtrie"
version = "1.0.0"
authors = [{name = "Interstellio IO (PTY) LTD", email = "opensource@interstellio.io"}]
description = "A short description of your package"
readme = "README.rst"
requires-python = ">=3.10"
dependencies = []

[project.urls]
Homepage = "https://github.com/interstellio/ipprefixtrie"
Documentation = "https://ipprefixtrie.readthedocs.io"
